--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 	</dependencies>
 	<repositories>
 		<repository>
+			<id>MavenRepo2</id>
+			<name>Maven Repo2</name>
+			<url>http://repo2.maven.org/maven2</url>
+		</repository>
+		<repository>
 			<id>com.springsource.repository.bundles.release</id>
 			<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
 			<url>http://repository.springsource.com/maven/bundles/release</url>
